# Multi-Tenant-Saas

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
apps/api_keys/: admin.py  apps.py  authentication.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/audit_logs/: apps.py  middleware.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/billing/: admin.py  events.py  idempotency.py  limits.py  models.py  serializers.py  services.py  tasks.py  test_hardening.py  urls.py  views.py  webhook_validation.py
apps/core/: apps.py  exceptions.py  health.py  middleware.py  mixins.py  rate_limit.py  sentry_middleware.py  urls.py  views.py
apps/features/: admin.py  apps.py  cache.py  models.py  serializers.py  service.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/rbac/: __init__.py  apps.py  permissions.py  registry.py
apps/tenants/: __init__.py  apps.py  context.py  managers.py  middleware.py  models.py  serializers.py  urls.py  views.py
apps/usage/: apps.py  serializers.py  urls.py  views.py
apps/users/: admin.py  apps.py  models.py  serializers.py  tokens.py  urls.py  views.py
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  testing.py
docs/: CODEBASE_REVIEW.md  PHASE_6_REPORT.md  PRD.md  TRD.md
tests/: conftest.py  factories.py  test_auth.py
tests/api_keys/: test_api_keys.py  test_authentication.py  test_rate_limit.py
tests/audit_logs/: __init__.py  test_audit_logs.py
tests/billing/: __init__.py  test_invoices.py  test_limits.py  test_plans.py  test_subscription.py  test_webhooks.py
tests/isolation/: __init__.py  test_cross_tenant.py
tests/rbac/: __init__.py  (+2 more)
(+19 files in other folders)
